--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="flex h-screen">
         <div class="m-auto">
-            <h1 class="font-semibold text-xl">Dawn</h1>
-            <img class="rounded shadow-xl max-w-xs m-4" src="images/2024-11-01.jpg" alt="Dawn">
+            <h1 id="word" class="font-semibold text-xl">Word of the day</h1>
+            <img id="image" class="rounded shadow-xl max-w-xs m-4" src="images/2024-11-02.jpg" alt="Dawn">
             <div class="flex text-error"> 
                 <div class="flex-1 inline-flex items-center">
                     <svg id="like" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 pr-2 shadow-xl">
@@ -20,24 +20,92 @@
                     </svg>
                     <span id="likeCounter">0</span>
                 </div>
+                <div id="previousDate" class="flex-1 m-auto">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75 3 12m0 0 3.75-3.75M3 12h18" />
+                    </svg>
+                </div>
+                <div id="nextDate" class="flex-1 m-auto" hidden>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                </div>
 
                 <div class="flex-1 text-right">
-                    <p class="font-semibold">2024-11-01</p>
+                    <p id="date" class="font-semibold">2024-11-01</p>
                 </div>
             </div>
         </div>
     </div>
 </body>
 <script>
-    const googleScriptURL = "https://script.google.com/macros/s/AKfycbw-SAzyr3SA7B0uZ63fFo2FF7CSKrSd0mZYp273UzF4nO9vmE8Uli__RF__qD5x8uEExg/exec"
-    updatePageViews()
-
+    const words = ["Dawn", "Cascade", "Luminous"]
+    const firstDate = new Date("2024-11-01");
+    const today = new Date().toISOString().split('T')[0];
+    let selectedDate = today;
+    const googleScriptURL = `https://script.google.com/macros/s/AKfycbyC_L33KsHGWQk-H6Cp75TmZSOd2KMVMjtbei58PprIOA2yTt96AweD3aoH-aCw_2JVlA/exec`
+    updatePageViews(selectedDate);
+    updateWord(selectedDate)
+    updateDateStr(selectedDate)
+    updateImage(selectedDate)
     const like = document.getElementById("like")
     like.addEventListener("click", () => {
         animateLikeButton();
         like.setAttribute("fill", "currentColor")
-        incrementLike()
+        incrementLike(selectedDate);
     });
+
+    const previousDate = document.getElementById("previousDate");
+    const nextDate = document.getElementById("nextDate");
+    nextDate.addEventListener("click", () => {
+        previousDate.style.display = "block";
+        const nextDay = new Date(selectedDate);
+        nextDay.setDate(nextDay.getDate() + 1);
+        if (nextDay >= new Date(today)) {
+            nextDate.style.display = "none";
+        }
+        const nextDateStr = nextDay.toISOString().split('T')[0];
+        updateWord(nextDateStr);
+        updateDateStr(nextDateStr);
+        updateImage(nextDateStr);
+        updateLikeCounter(nextDateStr);
+        updatePageViews(nextDateStr);
+        selectedDate = nextDateStr;
+    });
+
+    previousDate.addEventListener("click", () => {
+        nextDate.style.display = "block";
+        const previousDay = new Date(selectedDate);
+        previousDay.setDate(previousDay.getDate() - 1);
+        if (previousDay <= firstDate) {
+            previousDate.style.display = "none";
+        }
+        const previousDateStr = previousDay.toISOString().split('T')[0];
+        updateWord(previousDateStr);
+        updateDateStr(previousDateStr);
+        updateImage(previousDateStr);
+        updateLikeCounter(previousDateStr);
+        updatePageViews(previousDateStr);
+        selectedDate = previousDateStr;
+    });
+
+
+    function getSelectedIndexFromDateStr(dateStr) {
+        return parseInt(dateStr.split("-")[2], 10) - 1;
+    }
+
+    function updateWord(dateStr){
+        document.getElementById("word").innerText = words[getSelectedIndexFromDateStr(dateStr)];
+    }
+
+    function updateDateStr(dateStr) {
+        document.getElementById("date").innerText = dateStr;
+    }
+
+    function updateImage(dateStr) {
+        const image = document.getElementById("image");
+        image.src = `images/${dateStr}.jpg`;
+    }
 
     function animateLikeButton() {
         like.classList.add("animate-pop");
@@ -46,8 +114,9 @@
         }, 300);
     }
 
-    function updateLikeCounter() {
-        fetch(`${googleScriptURL}?action=getLikes`)
+    function updateLikeCounter(dateStr) {
+        console.log("Fetching like counter for", dateStr);
+        fetch(`${googleScriptURL}?day=${dateStr}&action=getLikes`)
             .then(response => response.text())
             .then(data => {
                 document.getElementById("likeCounter").innerText = data;
@@ -55,19 +124,19 @@
             .catch(error => console.error("Error fetching like counter:", error));
     }
 
-    function incrementLike() {
-        fetch(`${googleScriptURL}?action=incrementLike`)
+    function incrementLike(dateStr) {
+        fetch(`${googleScriptURL}?day=${dateStr}&action=incrementLike`)
             .then(response => response.text())
             .then(data => {
                 console.log("Likes: " + data);
                 document.getElementById("likeCounter").innerText = data;
-                setCookie("liked", "true", 30); // Set "liked" cookie for 7 days
+                setCookie("liked", selectedDate, "true", 30); // Set "liked" cookie for 7 days
             })
             .catch(error => console.error("Error incrementing like counter:", error));
     }
 
-    function updatePageViews() {
-        fetch(googleScriptURL)
+    function updatePageViews(dateStr) {
+        fetch(`${googleScriptURL}?day=${dateStr}`)
             .then(response => response.text())
             .then(data => {
                 console.log(data);
@@ -76,15 +145,15 @@
             .catch(error => console.error("Error fetching page counter:", error));
     }
 
-    function setCookie(name, value, days) {
+    function setCookie(name, dateStr, value, days) {
         const date = new Date();
         date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
         const expires = "expires=" + date.toUTCString();
-        document.cookie = name + "=" + value + ";" + expires + ";path=/";
+        document.cookie = name + "_" + dateStr + "=" + value + ";" + expires + ";path=/";
     }
 
-    function getCookie(name) {
-        const cookieName = name + "=";
+    function getCookie(name, date) {
+        const cookieName = name + "_" + date + "=";
         const decodedCookie = decodeURIComponent(document.cookie);
         const cookieArray = decodedCookie.split(';');
         for (let i = 0; i < cookieArray.length; i++) {
@@ -96,15 +165,15 @@
         return null;
     }
 
-    if (checkLikedStatus()) {
+    if (checkLikedStatus(selectedDate)) {
         like.setAttribute("fill", "currentColor")
         console.log("Photo already liked")
     }
 
-    updateLikeCounter()
+    updateLikeCounter(selectedDate);
 
-    function checkLikedStatus() {
-        return getCookie("liked") === "true";
+    function checkLikedStatus(dateStr) {
+        return getCookie("liked", dateStr) === "true";
     }
 
 </script>
@@ -114,8 +183,11 @@
         0% {
             transform: scale(1);
         }
+        25% {
+            transform: scale(1.5);
+        }
         50% {
-            transform: scale(1.3);
+            transform: scale(0.8);
         }
         100% {
             transform: scale(1);
