--- a/stats/index.html
+++ b/stats/index.html
@@ -33,7 +33,13 @@
     <script>
         const googleScriptURL = "https://script.google.com/macros/s/AKfycbyC_L33KsHGWQk-H6Cp75TmZSOd2KMVMjtbei58PprIOA2yTt96AweD3aoH-aCw_2JVlA/exec"
         const days = ["2024-11-01", "2024-11-02", "2024-11-03"]
-        const words = ["Dawn", "Cascade", "Luminous"]
+        const words = ["Dawn", "Cascade", "Luminous", "Enigma", "Whirlwind",
+            "Fracture", "Serene", "Flicker", "Forgotten", "Echo", "Ember",
+            "Solitude", "Mirage", "Boundless", "Velvet", "Resilience",
+            "Gravity", "Glimmer", "Mosaic", "Veil", "Fusion", "Spark", "Abyss",
+            "Harmony", "Emberglow", "Pulse", "Solstice", "Radiant", "Drift",
+            "Twilight"]
+
         const tbody = document.getElementById("tbody")
 
         days.map((day, index) => {
