--- a/index.html
+++ b/index.html
@@ -1,201 +1,206 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dim">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Griboovember</title>
-    <link rel="icon" href="images/griboo.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-</head>
-<body>
-    <div class="flex h-screen">
-        <div class="m-auto">
-            <h1 id="word" class="font-semibold text-xl">Word of the day</h1>
-            <img id="image" class="rounded shadow-xl max-w-xs m-4" src="images/2024-11-02.jpg" alt="Dawn">
-            <div class="flex text-error"> 
-                <div class="flex-1 inline-flex items-center">
-                    <svg id="like" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 pr-2 shadow-xl">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
-                    </svg>
-                    <span id="likeCounter">0</span>
-                </div>
-                <div id="previousDate" class="flex-1 m-auto">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75 3 12m0 0 3.75-3.75M3 12h18" />
-                    </svg>
-                </div>
-                <div id="nextDate" class="flex-1 m-auto" hidden>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
-                    </svg>
-                </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Griboovember</title>
+        <link rel="icon" href="images/griboo.ico" type="image/x-icon">
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+    </head>
+    <body>
+        <div class="flex h-screen">
+            <div class="m-auto">
+                <h1 id="word" class="font-semibold text-xl">Word of the day</h1>
+                <img id="image" class="rounded shadow-xl max-w-xs m-4" src="images/2024-11-02.jpg" alt="Dawn">
+                <div class="flex text-error"> 
+                    <div class="flex-1 inline-flex items-center">
+                        <svg id="like" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-8 pr-2 shadow-xl">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                        </svg>
+                        <span id="likeCounter">0</span>
+                    </div>
+                    <div id="previousDate" class="flex-1 m-auto">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15.75 3 12m0 0 3.75-3.75M3 12h18" />
+                        </svg>
+                    </div>
+                    <div id="nextDate" class="flex-1 m-auto" hidden>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                        </svg>
+                    </div>
 
-                <div class="flex-1 text-right">
-                    <p id="date" class="font-semibold">2024-11-01</p>
+                    <div class="flex-1 text-right">
+                        <p id="date" class="font-semibold">2024-11-01</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-<script>
-    const words = ["Dawn", "Cascade", "Luminous"]
-    const firstDate = new Date("2024-11-01");
-    const today = new Date().toISOString().split('T')[0];
-    let selectedDate = today;
-    const googleScriptURL = `https://script.google.com/macros/s/AKfycbyC_L33KsHGWQk-H6Cp75TmZSOd2KMVMjtbei58PprIOA2yTt96AweD3aoH-aCw_2JVlA/exec`
-    updatePageViews(selectedDate);
-    updateWord(selectedDate)
-    updateDateStr(selectedDate)
-    updateImage(selectedDate)
-    const like = document.getElementById("like")
-    like.addEventListener("click", () => {
-        animateLikeButton();
-        like.setAttribute("fill", "currentColor")
-        incrementLike(selectedDate);
-    });
+    </body>
+    <script>
+        const words = ["Dawn", "Cascade", "Luminous", "Enigma", "Whirlwind",
+            "Fracture", "Serene", "Flicker", "Forgotten", "Echo", "Ember",
+            "Solitude", "Mirage", "Boundless", "Velvet", "Resilience",
+            "Gravity", "Glimmer", "Mosaic", "Veil", "Fusion", "Spark", "Abyss",
+            "Harmony", "Emberglow", "Pulse", "Solstice", "Radiant", "Drift",
+            "Twilight"]
+        const firstDate = new Date("2024-11-01");
+        const today = new Date().toISOString().split('T')[0];
+        let selectedDate = today;
+        const googleScriptURL = `https://script.google.com/macros/s/AKfycbyC_L33KsHGWQk-H6Cp75TmZSOd2KMVMjtbei58PprIOA2yTt96AweD3aoH-aCw_2JVlA/exec`
+        updatePageViews(selectedDate);
+        updateWord(selectedDate)
+        updateDateStr(selectedDate)
+        updateImage(selectedDate)
+        const like = document.getElementById("like")
+        like.addEventListener("click", () => {
+            animateLikeButton();
+            like.setAttribute("fill", "currentColor")
+            incrementLike(selectedDate);
+        });
 
-    const previousDate = document.getElementById("previousDate");
-    const nextDate = document.getElementById("nextDate");
-    nextDate.addEventListener("click", () => {
-        previousDate.style.display = "block";
-        const nextDay = new Date(selectedDate);
-        nextDay.setDate(nextDay.getDate() + 1);
-        if (nextDay >= new Date(today)) {
-            nextDate.style.display = "none";
-        }
-        const nextDateStr = nextDay.toISOString().split('T')[0];
-        updateWord(nextDateStr);
-        updateDateStr(nextDateStr);
-        updateImage(nextDateStr);
-        updateLikeCounter(nextDateStr);
-        updatePageViews(nextDateStr);
-        selectedDate = nextDateStr;
-    });
-
-    previousDate.addEventListener("click", () => {
-        nextDate.style.display = "block";
-        const previousDay = new Date(selectedDate);
-        previousDay.setDate(previousDay.getDate() - 1);
-        if (previousDay <= firstDate) {
-            previousDate.style.display = "none";
-        }
-        const previousDateStr = previousDay.toISOString().split('T')[0];
-        updateWord(previousDateStr);
-        updateDateStr(previousDateStr);
-        updateImage(previousDateStr);
-        updateLikeCounter(previousDateStr);
-        updatePageViews(previousDateStr);
-        selectedDate = previousDateStr;
-    });
-
-
-    function getSelectedIndexFromDateStr(dateStr) {
-        return parseInt(dateStr.split("-")[2], 10) - 1;
-    }
-
-    function updateWord(dateStr){
-        document.getElementById("word").innerText = words[getSelectedIndexFromDateStr(dateStr)];
-    }
-
-    function updateDateStr(dateStr) {
-        document.getElementById("date").innerText = dateStr;
-    }
-
-    function updateImage(dateStr) {
-        const image = document.getElementById("image");
-        image.src = `images/${dateStr}.jpg`;
-    }
-
-    function animateLikeButton() {
-        like.classList.add("animate-pop");
-        setTimeout(() => {
-            like.classList.remove("animate-pop");
-        }, 300);
-    }
-
-    function updateLikeCounter(dateStr) {
-        console.log("Fetching like counter for", dateStr);
-        fetch(`${googleScriptURL}?day=${dateStr}&action=getLikes`)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("likeCounter").innerText = data;
-            })
-            .catch(error => console.error("Error fetching like counter:", error));
-    }
-
-    function incrementLike(dateStr) {
-        fetch(`${googleScriptURL}?day=${dateStr}&action=incrementLike`)
-            .then(response => response.text())
-            .then(data => {
-                console.log("Likes: " + data);
-                document.getElementById("likeCounter").innerText = data;
-                setCookie("liked", selectedDate, "true", 30); // Set "liked" cookie for 7 days
-            })
-            .catch(error => console.error("Error incrementing like counter:", error));
-    }
-
-    function updatePageViews(dateStr) {
-        fetch(`${googleScriptURL}?day=${dateStr}`)
-            .then(response => response.text())
-            .then(data => {
-                console.log(data);
-
-            })
-            .catch(error => console.error("Error fetching page counter:", error));
-    }
-
-    function setCookie(name, dateStr, value, days) {
-        const date = new Date();
-        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-        const expires = "expires=" + date.toUTCString();
-        document.cookie = name + "_" + dateStr + "=" + value + ";" + expires + ";path=/";
-    }
-
-    function getCookie(name, date) {
-        const cookieName = name + "_" + date + "=";
-        const decodedCookie = decodeURIComponent(document.cookie);
-        const cookieArray = decodedCookie.split(';');
-        for (let i = 0; i < cookieArray.length; i++) {
-            let cookie = cookieArray[i].trim();
-            if (cookie.indexOf(cookieName) === 0) {
-                return cookie.substring(cookieName.length, cookie.length);
+        const previousDate = document.getElementById("previousDate");
+        const nextDate = document.getElementById("nextDate");
+        nextDate.addEventListener("click", () => {
+            previousDate.style.display = "block";
+            const nextDay = new Date(selectedDate);
+            nextDay.setDate(nextDay.getDate() + 1);
+            if (nextDay >= new Date(today)) {
+                nextDate.style.display = "none";
             }
-        }
-        return null;
-    }
+            const nextDateStr = nextDay.toISOString().split('T')[0];
+            updateWord(nextDateStr);
+            updateDateStr(nextDateStr);
+            updateImage(nextDateStr);
+            updateLikeCounter(nextDateStr);
+            updatePageViews(nextDateStr);
+            selectedDate = nextDateStr;
+        });
 
-    if (checkLikedStatus(selectedDate)) {
-        like.setAttribute("fill", "currentColor")
-        console.log("Photo already liked")
-    }
+        previousDate.addEventListener("click", () => {
+            nextDate.style.display = "block";
+            const previousDay = new Date(selectedDate);
+            previousDay.setDate(previousDay.getDate() - 1);
+            if (previousDay <= firstDate) {
+                previousDate.style.display = "none";
+            }
+            const previousDateStr = previousDay.toISOString().split('T')[0];
+            updateWord(previousDateStr);
+            updateDateStr(previousDateStr);
+            updateImage(previousDateStr);
+            updateLikeCounter(previousDateStr);
+            updatePageViews(previousDateStr);
+            selectedDate = previousDateStr;
+        });
 
-    updateLikeCounter(selectedDate);
 
-    function checkLikedStatus(dateStr) {
-        return getCookie("liked", dateStr) === "true";
-    }
+        function getSelectedIndexFromDateStr(dateStr) {
+            return parseInt(dateStr.split("-")[2], 10) - 1;
+        }
 
-</script>
-<!-- Tailwind CSS Custom Animation -->
-<style>
-    @keyframes pop {
-        0% {
-            transform: scale(1);
+        function updateWord(dateStr){
+            document.getElementById("word").innerText = words[getSelectedIndexFromDateStr(dateStr)];
         }
-        25% {
-            transform: scale(1.5);
+
+        function updateDateStr(dateStr) {
+            document.getElementById("date").innerText = dateStr;
         }
-        50% {
-            transform: scale(0.8);
+
+        function updateImage(dateStr) {
+            const image = document.getElementById("image");
+            image.src = `images/${dateStr}.jpg`;
         }
-        100% {
-            transform: scale(1);
+
+        function animateLikeButton() {
+            like.classList.add("animate-pop");
+            setTimeout(() => {
+                like.classList.remove("animate-pop");
+            }, 300);
         }
+
+        function updateLikeCounter(dateStr) {
+            console.log("Fetching like counter for", dateStr);
+            fetch(`${googleScriptURL}?day=${dateStr}&action=getLikes`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("likeCounter").innerText = data;
+                })
+                .catch(error => console.error("Error fetching like counter:", error));
+        }
+
+        function incrementLike(dateStr) {
+            fetch(`${googleScriptURL}?day=${dateStr}&action=incrementLike`)
+                .then(response => response.text())
+                .then(data => {
+                    console.log("Likes: " + data);
+                    document.getElementById("likeCounter").innerText = data;
+                    setCookie("liked", selectedDate, "true", 30); // Set "liked" cookie for 7 days
+                })
+                .catch(error => console.error("Error incrementing like counter:", error));
+        }
+
+        function updatePageViews(dateStr) {
+            fetch(`${googleScriptURL}?day=${dateStr}`)
+                .then(response => response.text())
+                .then(data => {
+                    console.log(data);
+
+                })
+                .catch(error => console.error("Error fetching page counter:", error));
+        }
+
+        function setCookie(name, dateStr, value, days) {
+            const date = new Date();
+            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+            const expires = "expires=" + date.toUTCString();
+            document.cookie = name + "_" + dateStr + "=" + value + ";" + expires + ";path=/";
+        }
+
+        function getCookie(name, date) {
+            const cookieName = name + "_" + date + "=";
+            const decodedCookie = decodeURIComponent(document.cookie);
+            const cookieArray = decodedCookie.split(';');
+            for (let i = 0; i < cookieArray.length; i++) {
+                let cookie = cookieArray[i].trim();
+                if (cookie.indexOf(cookieName) === 0) {
+                    return cookie.substring(cookieName.length, cookie.length);
+                }
+            }
+            return null;
+        }
+
+        if (checkLikedStatus(selectedDate)) {
+            like.setAttribute("fill", "currentColor")
+            console.log("Photo already liked")
+        }
+
+        updateLikeCounter(selectedDate);
+
+        function checkLikedStatus(dateStr) {
+            return getCookie("liked", dateStr) === "true";
+        }
+
+    </script>
+    <!-- Tailwind CSS Custom Animation -->
+    <style>
+@keyframes pop {
+    0% {
+        transform: scale(1);
     }
+    25% {
+        transform: scale(1.5);
+    }
+    50% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 
     .animate-pop {
         animation: pop 0.2s ease-in-out;
     }
-</style>
+    </style>
 </html>
