--- a/calendar/index.html
+++ b/calendar/index.html
@@ -34,6 +34,9 @@
             div.classList.add("h-36", "w-36", "rounded-lg", "shadow", "transition-transform", "duration-200", "transform", "hover:scale-110", "hover:shadow-2xl");
             if (dateStr <= today) {
                 div.classList.add(`bg-[url('/images/${dateStr}.jpg')]`, "bg-cover", "bg-center");
+                div.addEventListener("click", () => {
+                    window.location.href = `/?day=${dateStr}`;
+                });
             } else {
                 const overlay = document.createElement("div");
                 overlay.classList.add("bg-black", "bg-opacity-30", "h-full", "w-full", "rounded-lg", "flex", "items-center", "justify-center");
