--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 </div>
             </div>
         </div>
+        <div class="absolute top-4 left-4 m-4" id="gallery">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 0 1 6 3.75h2.25A2.25 2.25 0 0 1 10.5 6v2.25a2.25 2.25 0 0 1-2.25 2.25H6a2.25 2.25 0 0 1-2.25-2.25V6ZM3.75 15.75A2.25 2.25 0 0 1 6 13.5h2.25a2.25 2.25 0 0 1 2.25 2.25V18a2.25 2.25 0 0 1-2.25 2.25H6A2.25 2.25 0 0 1 3.75 18v-2.25ZM13.5 6a2.25 2.25 0 0 1 2.25-2.25H18A2.25 2.25 0 0 1 20.25 6v2.25A2.25 2.25 0 0 1 18 10.5h-2.25a2.25 2.25 0 0 1-2.25-2.25V6ZM13.5 15.75a2.25 2.25 0 0 1 2.25-2.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-2.25A2.25 2.25 0 0 1 13.5 18v-2.25Z" />
+            </svg>
+        </div>
     </body>
     <script>
         const words = ["Dawn", "Cascade", "Luminous", "Enigma", "Whirlwind",
@@ -188,6 +193,10 @@
             const urlParams = new URLSearchParams(window.location.search);
             return urlParams.get('day');
         }
+
+        document.getElementById("gallery").addEventListener("click", () => {
+            window.location.href = "/gallery/";
+        });
 
     </script>
     <!-- Tailwind CSS Custom Animation -->
