add tomorrow's picture + some minor fixes

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Griboovember</title>
-        <link rel="icon" href="images/griboo.ico" type="image/x-icon">
+        <link rel="icon" href="../images/griboo.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
         <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     </head>
