--- a/stats/index.html
+++ b/stats/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Griboovember</title>
-        <link rel="icon" href="/images/griboo.ico" type="image/x-icon">
+        <link rel="icon" href="../images/griboo.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
         <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     </head>
@@ -32,7 +32,13 @@
     </body>
     <script>
         const googleScriptURL = "https://script.google.com/macros/s/AKfycbyC_L33KsHGWQk-H6Cp75TmZSOd2KMVMjtbei58PprIOA2yTt96AweD3aoH-aCw_2JVlA/exec"
-        const days = ["2024-11-01", "2024-11-02", "2024-11-03"]
+        const firstDate = new Date("2024-11-01");
+        const days = Array.from({ length: 30 }, (_, i) => {
+            const date = new Date(firstDate);
+            date.setDate(date.getDate() + i);
+            return date.toISOString().split("T")[0];
+        });
+        const today = new Date().toISOString().split("T")[0];
         const words = ["Dawn", "Cascade", "Luminous", "Enigma", "Whirlwind",
             "Fracture", "Serene", "Flicker", "Forgotten", "Echo", "Ember",
             "Solitude", "Mirage", "Boundless", "Velvet", "Resilience",
