--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         function updateImage(dateStr) {
             const image = document.getElementById("image");
             image.src = `images/${dateStr}.jpg`;
+            image.alt = words[getSelectedIndexFromDateStr(dateStr)];
         }
 
         function animateLikeButton() {
