update about text

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
                 <div class="items-center max-w-sm overflow-auto h-lvh pb-64 p-2">
                     <div class="p-2">
                         <p>
-                        Challenge imaginé par <a class="text-error" href="https://www.instagram.com/josephmilliere_illustration/">@josephmilliere_illustration</a> et <a class="text-error" href="https://www.instagram.com/yrieixl/">@yrieixl</a> qui se déroule tout au long du mois de Novembre 2024. On s'inspire du challenge d'<a class="text-error" href="https://inktober.com/rules">Inktober</a> et on le conjuge à notre envie.
+                        Le Griboovember est un challenge imaginé par <a class="text-error" href="https://www.instagram.com/josephmilliere_illustration/">@josephmilliere_illustration</a> et <a class="text-error" href="https://www.instagram.com/yrieixl/">@yrieixl</a> qui se déroule tout au long du mois de Novembre 2024. On s'inspire du challenge d'<a class="text-error" href="https://inktober.com/rules">Inktober</a> et on le conjuge à notre envie.
                         </p>
                         <br>
                         <p>
